2006-03-16  David Bateman  <dbateman@free.fr>

	* sparse-xdiv.cc (result_ok): delete.
	(xdiv, xleftdiv): Simplify to use version of SpareMatrix::solve
	and SparseComplexMatrix::solve which internally treats rectangular
	and singular matrices.
	* DLD-FUNCTIONS/luinc.cc: Remove error test for singular matrix as
	QR solver now implemented.
	* DLD-FUNCTIONS/matrix_type.cc (Fmatrix_type): Paranoid check on 
	error_state. Disable tests for the detection of underdetermined 
	lower and over-determined upper matrix due to problems with 
	non minimum norm solutions.
	* DLD-FUNCTIONS/spqr.cc: Warning for issue of use of Fspqr for
	under-determined problems.

2006-03-16  John W. Eaton  <jwe@octave.org>

	* __gnuplot_raw__.l: Move here from DLD-FUNCTIONS/__gnuplot_raw__.l.
	Use DEFUN, not DEFUN_DLD.  Include defun.h, not defun-dld.h.
	(gnuplot::do_init):Move guts to symbols_of___gnuplot_raw__.
	(symbols_of___gnuplot_raw__): New function.

	* Makefile.in (DLD_XSRC): Delete __gnuplot_raw__.l from the list.
	(DIST_SRC): Include __gnuplot_raw__.l in the list.
	(__gnuplot_raw__.cc): Depend on __gnuplot_raw__.l, not
	DLD-FUNCTIONS/__gnuplot_raw__.l

	* ls-oct-ascii.h (extract_keyword): Use std::string compare method
	instead of strncmp.
	* ls-oct-ascii.cc (extract_keyword): Likewise. 

2006-03-15  William Poetra Yoga Hadisoeseno  <williampoetra@gmail.com>

	* src/data.cc (Frows, Fcolumns): New functions.

	* DLD-FUNCTIONS/time.cc (Fstrptime, Fstrftime): Fix docstring.

	* strfns.cc (Fstrcmp): Fixed docstring.

2006-03-15  John W. Eaton  <jwe@octave.org>

	* pager.cc (Fterminal_size): New function.

	* help.cc (help_from_info): Simplify.
	(try_info): Use feval to call doc instead of executing info program.
	(additional_help_message): Point users to doc instead of help -i.
	From Soren Hauberg <soren@hauberg.org>.

	* toplev.cc (Fsystem): Return output if nargout > 1, not 0.

2006-03-14  Keith Goodman  <kwgoodman@gmail.com>

	* help.cc (Fhelp, Fwhich, Flookfor): Doc string fix.
